Made refactor