@@ -4,6 +4,7 @@ import com.example.payments.export.api.BatchApi;
 import com.example.payments.export.mapper.BatchMapper;
 import com.example.payments.export.model.ExecutionDetail;
 import com.example.payments.export.model.JobDetail;
+import com.example.payments.export.model.JobInstanceDetail;
 import com.example.payments.export.model.JobSummary;
 import com.example.payments.export.model.StepDetail;
 import lombok.RequiredArgsConstructor;
@@ -17,7 +18,9 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.function.ToLongFunction;
 
 @RestController
 @RequiredArgsConstructor
@@ -29,92 +32,81 @@ public class BatchDashboardController implements BatchApi {
   @Override
   public ResponseEntity<List<JobSummary>> getJobSummaries() {
     List<JobSummary> summaries = jobExplorer.getJobNames().stream().map(this::buildJobSummary)
-        .sorted(Comparator.comparing(JobSummary::getJobName)).collect(Collectors.toList());
+        .sorted(Comparator.comparing(JobSummary::getJobName)).toList();
     return ResponseEntity.ok(summaries);
   }
 
   @Override
   public ResponseEntity<JobDetail> getJobDetail(String jobName, Integer page) {
-    int pageSize = 10;
-    int currentPage = page != null ? page : 0;
-    List<JobInstance> instances = new ArrayList<>();
-    long totalInstances = 0;
+    int p = page != null ? page : 0;
+    long tot = safeGetJobInstanceCount(jobName);
+    List<JobInstanceDetail> dets = safeGetJobInstances(jobName, p, 10).stream()
+        .map(i -> buildInstanceDetail(i, jobExplorer.getJobExecutions(i)))
+        .sorted(Comparator.comparingLong(JobInstanceDetail::getInstanceId).reversed()).toList();
+    int totPages = (int) Math.ceil((double) tot / 10);
+    return ResponseEntity.ok(batchMapper
+        .toJobDetail(new BatchMapper.JobDetailContext(jobName, dets, p, 10, totPages, tot)));
+  }
+
+  private long safeGetJobInstanceCount(String jobName) {
     try {
-      instances = jobExplorer.getJobInstances(jobName, currentPage * pageSize, pageSize);
-      totalInstances = jobExplorer.getJobInstanceCount(jobName);
+      return jobExplorer.getJobInstanceCount(jobName);
     } catch (NoSuchJobException e) {
-      // Job doesn't exist yet, show empty list
+      return 0;
     }
+  }
 
-    List<com.example.payments.export.model.JobInstanceDetail> details = instances.stream()
-        .map(instance -> buildInstanceDetail(instance, jobExplorer.getJobExecutions(instance)))
-        .sorted(Comparator
-            .comparingLong(com.example.payments.export.model.JobInstanceDetail::getInstanceId)
-            .reversed())
-        .collect(Collectors.toList());
-
-    return ResponseEntity.ok(batchMapper.toJobDetail(jobName, details, currentPage, pageSize,
-        (int) Math.ceil((double) totalInstances / pageSize), totalInstances));
+  private List<JobInstance> safeGetJobInstances(String jobName, int page, int size) {
+    return jobExplorer.getJobInstances(jobName, page * size, size);
   }
 
   @Override
   public ResponseEntity<ExecutionDetail> getExecutionDetail(Long executionId) {
-    JobExecution execution = jobExplorer.getJobExecution(executionId);
-    if (execution == null) {
+    JobExecution ex = jobExplorer.getJobExecution(executionId);
+    if (ex == null) {
       return ResponseEntity.notFound().build();
     }
+    List<StepDetail> st = ex.getStepExecutions().stream().map(batchMapper::toStepDetail).toList();
+    return ResponseEntity.ok(batchMapper.toExecutionDetail(buildCtx(ex, st)));
+  }
 
-    List<StepDetail> steps = execution.getStepExecutions().stream().map(batchMapper::toStepDetail)
-        .collect(Collectors.toList());
+  private BatchMapper.ExecutionDetailContext buildCtx(JobExecution ex, List<StepDetail> st) {
+    List<StepDetail> mSt = filterSteps(st, false);
+    List<StepDetail> pSt = filterSteps(st, true);
+    return new BatchMapper.ExecutionDetailContext(batchMapper.toJobExecution(ex),
+        batchMapper.toJobInstance(ex.getJobInstance()), getParams(ex), mSt, pSt, !pSt.isEmpty(),
+        sum(pSt, StepDetail::getReadCount), sum(pSt, StepDetail::getWriteCount),
+        sum(pSt, StepDetail::getSkipCount));
+  }
 
-    List<StepDetail> managerSteps =
-        steps.stream().filter(s -> s.getStepName() != null && !s.getStepName().contains(":"))
-            .collect(Collectors.toList());
+  private List<StepDetail> filterSteps(List<StepDetail> st, boolean isPartition) {
+    return st.stream()
+        .filter(s -> s.getStepName() != null && s.getStepName().contains(":") == isPartition)
+        .toList();
+  }
 
-    List<StepDetail> partitionSteps =
-        steps.stream().filter(s -> s.getStepName() != null && s.getStepName().contains(":"))
-            .sorted(Comparator.comparing(StepDetail::getStepName)).collect(Collectors.toList());
+  private Map<String, String> getParams(JobExecution ex) {
+    Map<String, String> p = new HashMap<>();
+    ex.getJobParameters().getParameters().forEach((k, v) -> p.put(k, String.valueOf(v.getValue())));
+    return p;
+  }
 
-    java.util.Map<String, String> params = new java.util.HashMap<>();
-    execution.getJobParameters().getParameters()
-        .forEach((k, v) -> params.put(k, String.valueOf(v.getValue())));
-
-    long totalRead = partitionSteps.stream().mapToLong(StepDetail::getReadCount).sum();
-    long totalWrite = partitionSteps.stream().mapToLong(StepDetail::getWriteCount).sum();
-    long totalSkip = partitionSteps.stream().mapToLong(StepDetail::getSkipCount).sum();
-
-    return ResponseEntity.ok(batchMapper.toExecutionDetail(batchMapper.toJobExecution(execution),
-        batchMapper.toJobInstance(execution.getJobInstance()), params, managerSteps, partitionSteps,
-        !partitionSteps.isEmpty(), totalRead, totalWrite, totalSkip));
+  private long sum(List<StepDetail> steps, ToLongFunction<StepDetail> mapper) {
+    return steps.stream().mapToLong(mapper).sum();
   }
 
   private JobSummary buildJobSummary(String jobName) {
-    long count = 0;
-    List<JobInstance> recent = new ArrayList<>();
-    try {
-      count = jobExplorer.getJobInstanceCount(jobName);
-      recent = jobExplorer.getJobInstances(jobName, 0, 1);
-    } catch (NoSuchJobException e) {
-      // Ignore, counts stay at 0
-    }
-
-    String lastStatus = "NEVER_RUN";
-    int totalExecutions = 0;
-    if (!recent.isEmpty()) {
-      List<JobExecution> execs = jobExplorer.getJobExecutions(recent.get(0));
-      if (!execs.isEmpty()) {
-        lastStatus = execs.get(0).getStatus().name();
-        totalExecutions = execs.size();
-      }
-    }
-    return batchMapper.toJobSummary(jobName, count, lastStatus, totalExecutions);
+    long count = safeGetJobInstanceCount(jobName);
+    List<JobInstance> recent = jobExplorer.getJobInstances(jobName, 0, 1);
+    List<JobExecution> ex =
+        recent.isEmpty() ? new ArrayList<>() : jobExplorer.getJobExecutions(recent.get(0));
+    return batchMapper.toJobSummary(jobName, count,
+        ex.isEmpty() ? "NEVER_RUN" : ex.get(0).getStatus().name(), ex.size());
   }
 
-  private com.example.payments.export.model.JobInstanceDetail buildInstanceDetail(
-      JobInstance instance, List<JobExecution> executions) {
+  private JobInstanceDetail buildInstanceDetail(JobInstance instance,
+      List<JobExecution> executions) {
     String latestStatus = executions.isEmpty() ? "UNKNOWN" : executions.get(0).getStatus().name();
-    List<com.example.payments.export.model.JobExecution> apiExecutions =
-        executions.stream().map(batchMapper::toJobExecution).collect(Collectors.toList());
-    return batchMapper.toJobInstanceDetail(instance, latestStatus, apiExecutions);
+    return batchMapper.toJobInstanceDetail(instance, latestStatus, executions);
   }
 }
